--- a/index.html
+++ b/index.html
@@ -105,8 +105,9 @@
     <section id="contact" class="contact">
         <h2>Contact</h2>
         <p>Feel free to reach out via email or connect with me on LinkedIn!</p>
-        <p>Email: lehanrathnayakacs@gmail.com</p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/lehan-rathnayaka-a1248224a/" target="_blank">My LinkedIn Profile</a></p>
+        <p>Email:<a href="lehanrathnayakacs@gmail.com"</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/lehan-rathnayaka-a1248224a/" target="_blank">Lehan Rathnayaka</a></p>
+            <p></p>
     </section>
 
     <footer>
