--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <section id="contact" class="contact">
         <h2>Contact</h2>
         <p>Feel free to reach out via email or connect with me on LinkedIn!</p>
-        <p>Email:"lehanrathnayakacs@gmail.com"</p>
+        <p>Email: <a href="mailto:lehanrathnayakacs@gmail.com">lehanrathnayakacs@gmail.com</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/lehan-rathnayaka-a1248224a/" target="_blank">Lehan Rathnayaka</a></p>
          
     </section>
